kube/ingress/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: nginx
  namespace: ingress-nginx
spec:
  tls:
  - hosts:
    - nginx2.example.com
    secretName: kubernetes-dashboard-certs-ing
  rules:
  - host: nginx2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard-ingress
          servicePort: 443
